<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/title_bar_about"
		android:layout_width="fill_parent"
		android:layout_height="45dp"
		android:orientation="horizontal"
		android:background="@color/title_background">
		<ImageButton 
            android:id="@+id/btn_title_home"
			android:layout_width="45dp"
			android:layout_height="fill_parent"
			android:background="@drawable/title_button"
            android:contentDescription="Home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick"/>
            
		<ImageView style="@style/TitleBarSeparator" />
		<TextView style="@style/TitleBarText" />
		<ImageView style="@style/TitleBarSeparator" />
		
		<ImageButton
			android:id="@+id/btn_title_current_location"
			android:layout_width="45dp"
			android:layout_height="fill_parent"
			android:background="@drawable/title_button"
			android:contentDescription="Current location"
			android:src="@drawable/ic_title_search"
			android:onClick="onSearchClick"/>
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/view_about"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="@color/background1">
		<TextView android:text="@string/explain0"
				  android:textColor="@color/foreground1"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="20dip"
				  android:layout_marginBottom="10dip"
				  android:gravity="center_horizontal"/>
		
		<TextView android:text="@string/explain1"
				  android:textColor="@color/foreground1"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginBottom="10dip"
				  android:gravity="center_horizontal"
				  android:layout_weight="1"/>
		
		<TextView android:text="@string/explain2"
				  android:textColor="@color/foreground1"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginBottom="10dip"
				  android:gravity="center_horizontal"/>
				  
		<TextView android:text="@string/explain3"
				  android:textColor="@color/foreground1"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginBottom="10dip"
				  android:gravity="center_horizontal"/>
	</LinearLayout>
		
</LinearLayout>